--- a/JSQMessagesViewController/Controllers/JSQMessagesViewController.xib
+++ b/JSQMessagesViewController/Controllers/JSQMessagesViewController.xib
@@ -21,6 +21,7 @@
                 <outlet property="picButton" destination="u99-da-1JK" id="8Mo-VU-Nrt"/>
                 <outlet property="scrollPreview" destination="cEp-vy-YTH" id="WLd-k0-6rd"/>
                 <outlet property="scrollPreviewHeightConstraint" destination="mvW-xG-OCr" id="Ky7-0U-iap"/>
+                <outlet property="sendButton" destination="uSE-gi-g26" id="Ufg-ET-UMk"/>
                 <outlet property="view" destination="mUa-cS-ru4" id="nki-T1-RTI"/>
             </connections>
         </placeholder>
@@ -95,10 +96,20 @@
                                 <constraint firstItem="Ah3-0i-FMc" firstAttribute="height" relation="lessThanOrEqual" secondItem="NVI-4n-k9R" secondAttribute="height" id="ffq-3a-iDO"/>
                             </constraints>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSE-gi-g26">
+                            <rect key="frame" x="328" y="10" width="46" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="ybw-wz-Myn"/>
+                            </constraints>
+                            <state key="normal" title="Send">
+                                <color key="titleColor" red="0.72941176470000002" green="0.59999999999999998" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="NVI-4n-k9R" secondAttribute="trailing" constant="50" id="2bQ-n3-xSU"/>
+                        <constraint firstItem="uSE-gi-g26" firstAttribute="leading" secondItem="Ah3-0i-FMc" secondAttribute="trailing" constant="3" id="2yc-qX-QBY"/>
                         <constraint firstAttribute="bottom" secondItem="UQU-Nf-Gr5" secondAttribute="bottom" constant="12" id="4jG-1x-FlV"/>
                         <constraint firstItem="UQU-Nf-Gr5" firstAttribute="leading" secondItem="u99-da-1JK" secondAttribute="trailing" constant="11" id="7Rw-ol-abJ"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="250" id="DJT-aH-rsP"/>
@@ -106,9 +117,11 @@
                         <constraint firstItem="u99-da-1JK" firstAttribute="bottom" secondItem="zSe-kp-Prg" secondAttribute="bottom" constant="-12" id="GMY-ms-moe"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Ovl-Ze-Owj"/>
                         <constraint firstItem="u99-da-1JK" firstAttribute="leading" secondItem="zSe-kp-Prg" secondAttribute="leading" constant="11" id="Z17-Q9-Wd9"/>
+                        <constraint firstAttribute="trailing" secondItem="uSE-gi-g26" secondAttribute="trailing" constant="1" id="ZBb-cV-Avk"/>
                         <constraint firstAttribute="bottom" secondItem="NVI-4n-k9R" secondAttribute="bottom" id="f1a-a5-yNX"/>
                         <constraint firstItem="NVI-4n-k9R" firstAttribute="leading" secondItem="UQU-Nf-Gr5" secondAttribute="trailing" constant="13" id="fhp-1Z-j8d"/>
                         <constraint firstItem="NVI-4n-k9R" firstAttribute="height" secondItem="zSe-kp-Prg" secondAttribute="height" id="ggo-kA-Y6o"/>
+                        <constraint firstAttribute="bottom" secondItem="uSE-gi-g26" secondAttribute="bottom" constant="10" id="yeO-ZN-9iL"/>
                     </constraints>
                 </view>
             </subviews>
